2005-06-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* rules/seahaven.scm (droppable?): Add hilighting support for
	Seahaven.

	* sol.c (main_prog): Removed the default focus after too many
	complaints of "a cat on the keyboard ruined my solitaire game!".
	The use of any arrow key restores the focus to the toolbar.
	
2005-06-01  Richard Hoelscher  <rah@rahga.com>

	* rules, auld_lang_syne.scm, cover.scm, peek.scm, scuffle.scm, 
	spider.scm, spider_one_suit.scm, spider_two_suit.scm, straight_up.scm,
	quatorze.scm, ten_across.scm, thumb_and_pouch.scm, valentine.scm:
	Highlighting support.
	* TODO: We are using this file to track which games need highlighting.

	* canfield.scm, royal_east.scm, jumbo.scm, freecell.scm: Highlighting 
	amd a fix for Jumbo crasher (#304054) and Freecell doubleclicking
	(#171805) from Vincent Povirk <madewokherd@gmail.com>


2005-05-31  Richard Hoelscher  <rah@rahga.com>

	* sol.[ch]: 
	* cscmi.c:
	* menu.c: Switch from GnomeAppBar to GtkStatusBar, and use new
	games-stock support for menu tooltips in the statusbar.

2005-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c (set_fullscreen_actions): Hide the menu bar in
	full-screen mode. I am tempted to also hide the status bar, but
	that gives essential info in klondike (the number of redeals
	remaining).

	* get_titles.pl (get_i18n_name_strings): 
	* sol.c (game_file_to_name): Capitalise all the words in the game
	names. This avoids "Monte carlo" while making life hell for 
	translators. Also told get_titles.pl about the new rules directory
	and simplified one of the regexps.

2005-05-26  Richard Hoelscher  <rah@rahga.com>

	* cscmi.c (scm_set_feature_word)(scm_get_feature_word)(scm_set_lambda) 
	* sol.scm (set-features)(reset-features): 
	Allow new functions to be added to set-lambda. If a feature is not
	supported by a game, then scm_set_lambda() won't try to implement it.
	* sol.[ch]: Add "enabled_features" global, which can be checked against