@@ -224,10 +224,15 @@
       (or (and (= (get-value (car card-list)) king)
 	       (add-to-score! 1))
 	  (and (= start-slot 2)
-	       (= 13 (+ (get-value (car card-list))
-			(get-value (get-top-card start-slot))))
-	       (add-to-score! 2)
-	       (remove-card start-slot)))
+	       (if (empty-slot? start-slot)
+		   (and (= 13 (+ (get-value (car card-list))
+			      (get-value (get-top-card 1))))
+			(add-to-score! 2)
+			(remove-card 1))
+		   (and (= 13 (+ (get-value (car card-list))
+		  		 (get-value (get-top-card start-slot))))
+	                (add-to-score! 2)
+	                (remove-card start-slot)))))
       (and (not (empty-slot? end-slot))
 	   (available? end-slot start-slot)
 	   (= 13 (+ (get-value (car card-list))
