@@ -1,3 +1,8 @@
+2005-06-02  Richard Hoelscher  <rah@rahga.com>
+
+	* rules/treize.scm (button-released): Fix a crasher and treat the
+	waste as if it was a single slot when it contains only 2 cards.
+
 2005-06-02  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* rules/seahaven.scm (droppable?): Add hilighting support for
